--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':library')
+    implementation project(path: ':clientlog')
 
     implementation "com.android.support:appcompat-v7:$android_support_lib_version"
 
