--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply from: "${project.rootDir}/buildsystem/dependency-versions.gradle"
+//apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion compile_sdk_version
@@ -20,6 +21,10 @@ android {
         }
     }
 }
+/*aspectjx {
+//排除所有package路径中包含`android.support`的class文件及库（jar文件）
+    exclude 'android.support'
+}*/
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,4 +37,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'me.weishu:epic:0.6.0'
+
 }
