--- a/clientlog/build.gradle
+++ b/clientlog/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:3.5.1"
     testImplementation "org.mockito:mockito-core:2.18.0"
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation 'com.github.skyNet2017:MethodInterceptProxy:1.0.0'
+    //implementation 'com.github.skyNet2017:MethodInterceptProxy:1.0.0'
 }
 
 publishing {
