--- a/clientlog/build.gradle
+++ b/clientlog/build.gradle
@@ -38,6 +38,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -52,6 +56,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:3.5.1"
     testImplementation "org.mockito:mockito-core:2.18.0"
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    api 'org.aspectj:aspectjrt:1.9.0'
     //implementation 'com.github.skyNet2017:MethodInterceptProxy:1.0.0'
 }
 
