--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,9 @@ android {
         targetSdkVersion target_sdk_version
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -36,7 +38,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':clientlog')
+    implementation project(path: ':webviewlib')
 
     implementation "com.android.support:appcompat-v7:$android_support_lib_version"
 
@@ -46,7 +48,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //compile 'me.weishu:epic:0.6.0'
-
+    /*implementation 'com.just.agentweb:agentweb:4.1.4' // (必选)
+    implementation 'com.just.agentweb:filechooser:4.1.4'// (可选)
+    implementation 'com.download.library:Downloader:4.1.4'// (可选)
+    compile 'com.wuhenzhizao:titlebar:1.1.4'*/
 }
 
 
