--- a/clientlog/build.gradle
+++ b/clientlog/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.18.0"
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     api 'org.aspectj:aspectjrt:1.9.0'
+    api 'com.android.support:appcompat-v7:28.0.0'
     //implementation 'com.github.skyNet2017:MethodInterceptProxy:1.0.0'
 }
 
