--- a/webviewlib/build.gradle
+++ b/webviewlib/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     api 'com.just.agentweb:agentweb:4.1.4' // (必选)
     api 'com.just.agentweb:filechooser:4.1.4'// (可选)
     api 'com.download.library:Downloader:4.1.4'// (可选)
-    api 'com.wuhenzhizao:titlebar:1.1.4'
+    implementation 'com.wuhenzhizao:titlebar:1.1.4'
 }
