--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,12 @@ dependencies {
 }
 
 
-/*apply plugin: 'android-aspectjx'
+apply plugin: 'android-aspectjx'
 aspectjx {
 //排除所有package路径中包含`android.support`的class文件及库（jar文件）
     exclude 'com.google','com.taobao'
     enabled true
-}*/
+}
 
 //编译参数名称 jdk1.8新特性之一，默认关闭的，由于用到了反射，打开它，不然build后没办法启动
 /*
